###########
# HEADERS #
###########
DEV_HEADER=		@top_srcdir@/include/xpn.h
COMMON_HEADER=		@top_srcdir@/include/all_system.h \
			@top_srcdir@/include/config.h \
			@top_srcdir@/include/config.h.in \
			@top_srcdir@/include/config_linux.h \
			@top_srcdir@/include/config_win32.h \
			@top_srcdir@/include/expand.h \
			@top_srcdir@/include/expand_lib.h \
			@top_srcdir@/include/xpn_debug.h
BASE_HEADER=		@top_srcdir@/include/base/base_lib.h \
			@top_srcdir@/include/base/darray.h \
			@top_srcdir@/include/base/debug_msg.h \
			@top_srcdir@/include/base/debug_tags.h \
			@top_srcdir@/include/base/dtable.h \
			@top_srcdir@/include/base/math_misc.h \
			@top_srcdir@/include/base/string_misc.h \
			@top_srcdir@/include/base/time_misc.h \
			@top_srcdir@/include/base/trace_msg.h \
			@top_srcdir@/include/base/trace_tags.h \
			@top_srcdir@/include/base/urlstr.h
NFI_LOCAL_HEADER=	@top_srcdir@/include/nfi/nfi_local/local_lib.h \
			@top_srcdir@/include/nfi/nfi_local/nfi_local_err.h \
			@top_srcdir@/include/nfi/nfi_local/nfi_local.h
### BEGIN OF NFI_MODULE_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF NFI_NFS_HEADER BLOCK. Do not remove this line. ###
NFI_NFS_HEADER=		@top_srcdir@/include/nfi/nfi_nfs/nfi_nfs_err.h \
			@top_srcdir@/include/nfi/nfi_nfs/nfi_nfs.h \
			@top_srcdir@/include/nfi/nfi_nfs/nfs.h \
			@top_srcdir@/include/nfi/nfi_nfs/nfs_lib.h
### END OF NFI_NFS_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF NFI_NFS3_HEADER BLOCK. Do not remove this line. ###
NFI_NFS3_HEADER=	@top_srcdir@/include/nfi/nfi_nfs3/nfi_nfs3_err.h \
			@top_srcdir@/include/nfi/nfi_nfs3/nfi_nfs3.h \
			@top_srcdir@/include/nfi/nfi_nfs3/nfs3.h \
			@top_srcdir@/include/nfi/nfi_nfs3/nfs3_lib.h
### END OF NFI_NFS3_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF NFI_FTP_HEADER BLOCK. Do not remove this line. ###
NFI_FTP_HEADER=		@top_srcdir@/include/nfi/nfi_ftp/ftp.h \
			@top_srcdir@/include/nfi/nfi_ftp/ftp_lib.h \
			@top_srcdir@/include/nfi/nfi_ftp/list_dir.h \
			@top_srcdir@/include/nfi/nfi_ftp/nfi_ftp_err.h \
			@top_srcdir@/include/nfi/nfi_ftp/nfi_ftp.h
### END OF NFI_FTP_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF NFI_XIO_HEADER BLOCK. Do not remove this line. ###
NFI_XIO_HEADER=		@top_srcdir@/include/nfi/nfi_xio/nfi_xio_err.h \
			@top_srcdir@/include/nfi/nfi_xio/nfi_xio.h \
			@top_srcdir@/include/nfi/nfi_xio/xio_lib.h
### END OF NFI_XIO_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF NFI_GSOAP_HEADER BLOCK. Do not remove this line. ###
NFI_GSOAP_HEADER=	@top_srcdir@/include/nfi/nfi_gsoap/gsoap_lib.h \
			@top_srcdir@/include/nfi/nfi_gsoap/nfi_gsoap_err.h \
			@top_srcdir@/include/nfi/nfi_gsoap/nfi_gsoap.h
### END OF NFI_GSOAP_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF NFI_GRIDFTP_HEADER BLOCK. Do not remove this line. ###
NFI_GRIDFTP_HEADER=	@top_srcdir@/include/nfi/nfi_gridftp/gridftp_lib.h \
			@top_srcdir@/include/nfi/nfi_gridftp/nfi_gridftp_err.h \
			@top_srcdir@/include/nfi/nfi_gridftp/nfi_gridftp.h
### END OF NFI_GRIDFTP_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF NFI_TCPSERVER_HEADER BLOCK. Do not remove this line. ###
NFI_TCPSERVER_HEADER=	@top_srcdir@/include/nfi/nfi_tcpServer/ \
			@top_srcdir@/include/nfi/nfi_tcpServer/tcpServer_comm.h \
			@top_srcdir@/include/nfi/nfi_tcpServer/tcpServer_conf.h \
			@top_srcdir@/include/nfi/nfi_tcpServer/tcpServer.h \
			@top_srcdir@/include/nfi/nfi_tcpServer/tcpServer_lib.h \
			@top_srcdir@/include/nfi/nfi_tcpServer/nfi_tcpServer_err.h \
			@top_srcdir@/include/nfi/nfi_tcpServer/nfi_tcpServer.h
### END OF NFI_TCPSERVER_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF NFI_MPISERVER_HEADER BLOCK. Do not remove this line. ###
NFI_MPISERVER_HEADER=	@top_srcdir@/include/nfi/nfi_mpiServer/ \
			@top_srcdir@/include/nfi/nfi_mpiServer/mpiServer_comm.h \
			@top_srcdir@/include/nfi/nfi_mpiServer/mpiServer_conf.h \
			@top_srcdir@/include/nfi/nfi_mpiServer/mpiServer.h \
			@top_srcdir@/include/nfi/nfi_mpiServer/mpiServer_lib.h \
			@top_srcdir@/include/nfi/nfi_mpiServer/nfi_mpiServer_err.h \
			@top_srcdir@/include/nfi/nfi_mpiServer/nfi_mpiServer.h
### END OF NFI_MPISERVER_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF NFI_IOPROXY_RPC_HEADER BLOCK. Do not remove this line. ###
NFI_IOPROXY_RPC_HEADER=	@top_srcdir@/include/nfi/nfi_ioproxy-rpc/nfi_ioproxy-rpc_err.h \
			@top_srcdir@/include/nfi/nfi_ioproxy-rpc/nfi_ioproxy-rpc.h \
			@top_srcdir@/include/nfi/nfi_ioproxy-rpc/ioproxy-rpc_lib.h
### END OF NFI_IOPROXY_RPC_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF NFI_HTTP_HEADER BLOCK. Do not remove this line. ###
NFI_HTTP_HEADER=	@top_srcdir@/include/nfi/nfi_http/nfi_http_err.h \
			@top_srcdir@/include/nfi/nfi_http/nfi_http.h \
			@top_srcdir@/include/nfi/nfi_http/http_lib.h
### END OF NFI_HTTP_HEADER BLOCK. Do not remove this line. ###
### END OF NFI_MODULE_HEADER BLOCK. Do not remove this line. ###

NFI_HEADER=		@top_srcdir@/include/nfi/nfi.h \
			@top_srcdir@/include/nfi/nfi_lib.h \
			@top_srcdir@/include/nfi/nfi_worker.h \
			$(NFI_LOCAL_HEADER)

### BEGIN OF NFI_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_NFS_HEADER BLOCK. Do not remove this line. ###
if ENABLE_NFS
NFI_HEADER+=$(NFI_NFS_HEADER)
endif
### END OF ENABLE_NFS_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_NFS3_HEADER BLOCK. Do not remove this line. ###
if ENABLE_NFS3
NFI_HEADER+=$(NFI_NFS3_HEADER)
endif
### END OF ENABLE_NFS3_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_FTP_HEADER BLOCK. Do not remove this line. ###
if ENABLE_FTP
NFI_HEADER+=$(NFI_FTP_HEADER)
endif
### END OF ENABLE_FTP_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_XIO_HEADER BLOCK. Do not remove this line. ###
if ENABLE_XIO
NFI_HEADER+=$(NFI_XIO_HEADER)
endif
### END OF ENABLE_XIO_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_GSOAP_HEADER BLOCK. Do not remove this line. ###
if ENABLE_GSOAP
NFI_HEADER+=$(NFI_GSOAP_HEADER)
endif
### END OF ENABLE_GSOAP_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_GRIDFTP_HEADER BLOCK. Do not remove this line. ###
if ENABLE_GRIDFTP
NFI_HEADER+=$(NFI_GRIDFTP_HEADER)
endif
### END OF ENABLE_GRIDFTP_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_TCPSERVER_HEADER BLOCK. Do not remove this line. ###
if ENABLE_TCPSERVER
NFI_HEADER+=$(NFI_TCPSERVER_HEADER)
endif
### END OF ENABLE_TCPSERVER_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_MPISERVER_HEADER BLOCK. Do not remove this line. ###
if ENABLE_MPISERVER
NFI_HEADER+=$(NFI_MPISERVER_HEADER)
endif
### END OF ENABLE_MPISERVER_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_IOPROXY_RPC_HEADER BLOCK. Do not remove this line. ###
if ENABLE_IOPROXY_RPC
NFI_HEADER+=$(NFI_IOPROXY_RPC_HEADER)
endif
### END OF ENABLE_IOPROXY_RPC_HEADER BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_HTTP_HEADER BLOCK. Do not remove this line. ###
if ENABLE_HTTP
NFI_HEADER+=$(NFI_HTTP_HEADER)
endif
### END OF ENABLE_HTTP_HEADER BLOCK. Do not remove this line. ###
### END OF NFI_HEADER BLOCK. Do not remove this line. ###

XPN_HEADER=		@top_srcdir@/include/xpn/xpn_lib.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_cwd.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_dir.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_err.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_file.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_init.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_opendir.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_open.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_policy_cwd.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_policy_init.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_policy_opendir.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_policy_open.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_policy_rw.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_rw.h \
			@top_srcdir@/include/xpn/xpn_simple/xpn_simple_lib.h \
			@top_srcdir@/include/xpn/xpn_simple/loc_incl.h \
			@top_srcdir@/include/xpni/xpni.h \
			@top_srcdir@/include/xpni/xpni_null/xpni_null.h \
			@top_srcdir@/include/xpni/xpni_log/xpni_log.h \
			@top_srcdir@/include/xpni/xpni_log/xpni_log_elog.h \
			@top_srcdir@/include/xpni/xpni_ft/xpni_ft.h \
			@top_srcdir@/include/xpni/xpni_ft/xpni_ft_metaData.h \
			@top_srcdir@/include/xpni/xpni_ft/xpni_ft_read.h \
			@top_srcdir@/include/xpni/xpni_ft/xpni_ft_write.h \
			@top_srcdir@/include/xpni/common/xpni_lowfsi_xpn.h \
			@top_srcdir@/include/xpni/common/xpni_lowfsi_printf.h \
			@top_srcdir@/include/xpni/common/xpni_lowfsi_posix.h \
			@top_srcdir@/include/xpni/common/xpni_lowfsi.h \
			@top_srcdir@/include/xpni/common/xpni_fstag.h \
			@top_srcdir@/include/xpni/common/xpni_fsit.h \
			@top_srcdir@/include/xpni/common/xpni_fmeta.h \
			@top_srcdir@/include/xpni/common/xpni_fit.h \
			@top_srcdir@/include/xpni/common/xpni_file.h \
			@top_srcdir@/include/xpni/common/xpni_dir.h \
			@top_srcdir@/include/xpn2.h


noinst_HEADERS=$(COMMON_HEADER) $(BASE_HEADER) $(NFI_HEADER) $(XPN_HEADER)
include_HEADERS=$(DEV_HEADER)


###########
# OBJECTS #
###########
BASE_OBJECTS=		@top_srcdir@/src/base/darray.c \
			@top_srcdir@/src/base/dtable.c \
			@top_srcdir@/src/base/math_misc.c \
			@top_srcdir@/src/base/trace_msg.c \
			@top_srcdir@/src/base/debug_msg.c \
			@top_srcdir@/src/base/string_misc.c \
			@top_srcdir@/src/base/time_misc.c \
			@top_srcdir@/src/base/urlstr.c

NFI_COMMON_OBJECTS=	@top_srcdir@/src/nfi/common/nfi_worker.c
NFI_LOCAL_OBJECTS=	@top_srcdir@/src/nfi/nfi_local/nfi_local.c \
			@top_srcdir@/src/nfi/nfi_local/nfi_local_err.c
### BEGIN OF NFI_MODULE_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF NFI_NFS_OBJECTS BLOCK. Do not remove this line. ###
NFI_NFS_OBJECTS=	@top_srcdir@/src/nfi/nfi_nfs/nfi_nfs.c \
			@top_srcdir@/src/nfi/nfi_nfs/nfi_nfs_err.c \
			@top_srcdir@/src/nfi/nfi_nfs/nfs.c \
			@top_srcdir@/src/nfi/nfi_nfs/nfs_clnt.c \
			@top_srcdir@/src/nfi/nfi_nfs/nfs_xdr.c
### END OF NFI_NFS_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF NFI_NFS3_OBJECTS BLOCK. Do not remove this line. ###
NFI_NFS3_OBJECTS=	@top_srcdir@/src/nfi/nfi_nfs3/nfi_nfs3.c \
			@top_srcdir@/src/nfi/nfi_nfs3/nfi_nfs3_err.c \
			@top_srcdir@/src/nfi/nfi_nfs3/nfs3.c \
			@top_srcdir@/src/nfi/nfi_nfs3/nfs3_clnt.c \
			@top_srcdir@/src/nfi/nfi_nfs3/nfs3_xdr.c
### END OF NFI_NFS3_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF NFI_FTP_OBJECTS BLOCK. Do not remove this line. ###
NFI_FTP_OBJECTS=	@top_srcdir@/src/nfi/nfi_ftp/ftp.c \
			@top_srcdir@/src/nfi/nfi_ftp/list_dir.c \
			@top_srcdir@/src/nfi/nfi_ftp/nfi_ftp.c \
			@top_srcdir@/src/nfi/nfi_ftp/nfi_ftp_err.c
### END OF NFI_FTP_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF NFI_XIO_OBJECTS BLOCK. Do not remove this line. ###
NFI_XIO_OBJECTS=	@top_srcdir@/src/nfi/nfi_xio/nfi_xio.c \
			@top_srcdir@/src/nfi/nfi_xio/nfi_xio_err.c
### END OF NFI_XIO_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF NFI_GSOAP_OBJECTS BLOCK. Do not remove this line. ###
NFI_GSOAP_OBJECTS=	@top_srcdir@/src/nfi/nfi_gsoap/nfi_gsoap.c \
			@top_srcdir@/src/nfi/nfi_gsoap/nfi_gsoap_err.c
### END OF NFI_GSOAP_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF NFI_GRIDFTP_OBJECTS BLOCK. Do not remove this line. ###
NFI_GRIDFTP_OBJECTS=	@top_srcdir@/src/nfi/nfi_gridftp/nfi_gridftp.c \
			@top_srcdir@/src/nfi/nfi_gridftp/nfi_gridftp_err.c
### END OF NFI_GRIDFTP_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF NFI_TCPSERVER_OBJECTS BLOCK. Do not remove this line. ###
NFI_TCPSERVER_OBJECTS=	@top_srcdir@/src/nfi/nfi_tcpServer/nfi_tcpServer.c \
			@top_srcdir@/src/nfi/nfi_tcpServer/tcpServer_comm.c \
			@top_srcdir@/src/nfi/nfi_tcpServer/nfi_tcpServer_err.c
### END OF NFI_TCPSERVER_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF NFI_MPISERVER_OBJECTS BLOCK. Do not remove this line. ###
NFI_MPISERVER_OBJECTS=	@top_srcdir@/src/nfi/nfi_mpiServer/nfi_mpiServer.c \
			@top_srcdir@/src/nfi/nfi_mpiServer/mpiServer_comm.c \
			@top_srcdir@/src/nfi/nfi_mpiServer/nfi_mpiServer_err.c
### END OF NFI_MPISERVER_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF NFI_IOPROXY_RPC_OBJECTS BLOCK. Do not remove this line. ###
NFI_IOPROXY_RPC_OBJECTS=	@top_srcdir@/src/nfi/nfi_ioproxy-rpc/nfi_ioproxy-rpc.c \
			@top_srcdir@/src/nfi/nfi_ioproxy-rpc/nfi_ioproxy-rpc_err.c
### END OF NFI_IOPROXY_RPC_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF NFI_HTTP_OBJECTS BLOCK. Do not remove this line. ###
NFI_HTTP_OBJECTS=	@top_srcdir@/src/nfi/nfi_http/nfi_http.c \
			@top_srcdir@/src/nfi/nfi_http/nfi_http_err.c
### END OF NFI_HTTP_OBJECTS BLOCK. Do not remove this line. ###
### END OF NFI_MODULE_OBJECTS BLOCK. Do not remove this line. ###

NFI_OBJECTS=$(NFI_COMMON_OBJECTS) $(NFI_LOCAL_OBJECTS)

### BEGIN OF NFI_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_NFS_OBJECTS BLOCK. Do not remove this line. ###
if ENABLE_NFS
NFI_OBJECTS+=$(NFI_NFS_OBJECTS)
endif
### END OF ENABLE_NFS_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_NFS3_OBJECTS BLOCK. Do not remove this line. ###
if ENABLE_NFS3
NFI_OBJECTS+=$(NFI_NFS3_OBJECTS)
endif
### END OF ENABLE_NFS3_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_FTP_OBJECTS BLOCK. Do not remove this line. ###
if ENABLE_FTP
NFI_OBJECTS+=$(NFI_FTP_OBJECTS)
endif
### END OF ENABLE_FTP_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_XIO_OBJECTS BLOCK. Do not remove this line. ###
if ENABLE_XIO
NFI_OBJECTS+=$(NFI_XIO_OBJECTS)
endif
### END OF ENABLE_XIO_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_GSOAP_OBJECTS BLOCK. Do not remove this line. ###
if ENABLE_GSOAP
NFI_OBJECTS+=$(NFI_GSOAP_OBJECTS)
endif
### END OF ENABLE_GSOAP_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_GRIDFTP_OBJECTS BLOCK. Do not remove this line. ###
if ENABLE_GRIDFTP
NFI_OBJECTS+=$(NFI_GRIDFTP_OBJECTS)
endif
### END OF ENABLE_GRIDFTP_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_TCPSERVER_OBJECTS BLOCK. Do not remove this line. ###
if ENABLE_TCPSERVER
NFI_OBJECTS+=$(NFI_TCPSERVER_OBJECTS)
endif
### END OF ENABLE_TCPSERVER_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_MPISERVER_OBJECTS BLOCK. Do not remove this line. ###
if ENABLE_MPISERVER
NFI_OBJECTS+=$(NFI_MPISERVER_OBJECTS)
endif
### END OF ENABLE_MPISERVER_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_IOPROXY_RPC_OBJECTS BLOCK. Do not remove this line. ###
if ENABLE_IOPROXY_RPC
NFI_OBJECTS+=$(NFI_IOPROXY_RPC_OBJECTS)
endif
### END OF ENABLE_IOPROXY_RPC_OBJECTS BLOCK. Do not remove this line. ###
### BEGIN OF ENABLE_HTTP_OBJECTS BLOCK. Do not remove this line. ###
if ENABLE_HTTP
NFI_OBJECTS+=$(NFI_HTTP_OBJECTS)
endif
### END OF ENABLE_HTTP_OBJECTS BLOCK. Do not remove this line. ###
### END OF NFI_OBJECTS BLOCK. Do not remove this line. ###

XPN_CORE_OBJECTS=	@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_cwd.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_dir.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_err.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_file.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_init.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_open.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_opendir.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_rw.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_fopen.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_fclose.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_fread.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_fwrite.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_fflush.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_fillbuf.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_flushbuf.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_fseek.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_ftell.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_fileno.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_setbuf.c \
			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_setvbuf.c
#			@top_srcdir@/src/xpn/xpn_simple/xpncore/xpn_f.c
XPN_POLICY_OBJECTS=	@top_srcdir@/src/xpn/xpn_simple/policy/xpn_policy_cwd.c \
			@top_srcdir@/src/xpn/xpn_simple/policy/xpn_policy_err.c \
			@top_srcdir@/src/xpn/xpn_simple/policy/xpn_policy_init.c \
			@top_srcdir@/src/xpn/xpn_simple/policy/xpn_policy_open.c \
			@top_srcdir@/src/xpn/xpn_simple/policy/xpn_policy_opendir.c \
			@top_srcdir@/src/xpn/xpn_simple/policy/xpn_policy_rw.c

XPN_OBJECTS=$(XPN_CORE_OBJECTS) $(XPN_POLICY_OBJECTS)

XPNI_OBJECTS=		@top_srcdir@/src/xpni/common/xpni_fit.c \
			@top_srcdir@/src/xpni/common/xpni_fmeta.c \
			@top_srcdir@/src/xpni/common/xpni_fsit.c \
			@top_srcdir@/src/xpni/common/xpni_file.c \
			@top_srcdir@/src/xpni/common/xpni_dir.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_close.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_destroy.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_exportFile.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_importFile.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_init.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_lseek.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_metaData.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_open.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_read.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_read_fail_r5i.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_read_fail_r5o.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_read_nofail_r5i.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_read_nofail_r5o.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_read_r5i.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_read_r5o.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_register.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_write.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_write_fail_r5i.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_write_fail_r5o.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_write_nofail_r5i.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_write_nofail_r5o.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_write_r5i.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_write_r5o.c \
			@top_srcdir@/src/xpni/xpni_ft/xpni_ft_opendir.c \
			@top_srcdir@/src/xpni/xpni_null/xpni_null_close.c \
			@top_srcdir@/src/xpni/xpni_null/xpni_null_destroy.c \
			@top_srcdir@/src/xpni/xpni_null/xpni_null_init.c \
			@top_srcdir@/src/xpni/xpni_null/xpni_null_open.c \
			@top_srcdir@/src/xpni/xpni_null/xpni_null_read.c \
			@top_srcdir@/src/xpni/xpni_null/xpni_null_register.c \
			@top_srcdir@/src/xpni/xpni_null/xpni_null_write.c \
			@top_srcdir@/src/xpni/xpni_null/xpni_null_importFile.c \
			@top_srcdir@/src/xpni/xpni_null/xpni_null_exportFile.c \
			@top_srcdir@/src/xpni/xpni_null/xpni_null_lseek.c \
			@top_srcdir@/src/xpni/xpni_null/xpni_null_opendir.c \
			@top_srcdir@/src/xpni/xpni_log/xpni_log_close.c \
			@top_srcdir@/src/xpni/xpni_log/xpni_log_destroy.c \
			@top_srcdir@/src/xpni/xpni_log/xpni_log_exportFile.c \
			@top_srcdir@/src/xpni/xpni_log/xpni_log_importFile.c \
			@top_srcdir@/src/xpni/xpni_log/xpni_log_init.c \
			@top_srcdir@/src/xpni/xpni_log/xpni_log_lseek.c \
			@top_srcdir@/src/xpni/xpni_log/xpni_log_open.c \
			@top_srcdir@/src/xpni/xpni_log/xpni_log_read.c \
			@top_srcdir@/src/xpni/xpni_log/xpni_log_register.c \
			@top_srcdir@/src/xpni/xpni_log/xpni_log_write.c \
			@top_srcdir@/src/xpni/xpni_log/xpni_log_opendir.c \
			@top_srcdir@/src/xpni/xpni_log/xpni_log_elog.c
XPN2_OBJECTS=		@top_srcdir@/src/xpn2/xpn2_close.c \
			@top_srcdir@/src/xpn2/xpn2_destroy.c \
			@top_srcdir@/src/xpn2/xpn2_init.c \
			@top_srcdir@/src/xpn2/xpn2_open.c \
			@top_srcdir@/src/xpn2/xpn2_creat.c \
			@top_srcdir@/src/xpn2/xpn2_read.c \
			@top_srcdir@/src/xpn2/xpn2_write.c \
			@top_srcdir@/src/xpn2/xpn2_ioctl.c \
			@top_srcdir@/src/xpn2/xpn2_lseek.c

OBJEXT=o


#############
# LIBRARIES #
#############
lib_LIBRARIES = libxpn.a
#lib_LIBRARIES = libbase.a libnfi.a libxpn.a
#libbase_a_SOURCES = $(BASE_OBJECTS)
#libnfi_a_SOURCES  = $(BASE_OBJECTS) $(NFI_OBJECTS)
libxpn_a_SOURCES  = $(BASE_OBJECTS) $(NFI_OBJECTS) $(XPN_OBJECTS) $(XPNI_OBJECTS) $(XPN2_OBJECTS)

#OBJEXT=lo

#lib_LTLIBRARIES = libbase.la
#lib_LTLIBRARIES = libbase.la libnfi.la libxpn.la
#libbase_la_SOURCES = $(BASE_OBJECTS)
#libnfi_la_SOURCES = $(BASE_OBJECTS) $(NFI_OBJECTS)
#libxpn_la_SOURCES = $(BASE_OBJECTS) $(NFI_OBJECTS) $(XPN_OBJECTS)

