FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

SET(LIBXPN_SOURCES_FULL_PATH "")
foreach(source ${LIBXPN_SOURCES})
	#SET(LIBXPN_SOURCES_FULL_PATH "${LIBXPN_SOURCES_FULL_PATH};${CMAKE_CURRENT_BINARY_DIR}/..${CMAKE_FILES_DIRECTORY}/xpn.dir/${source}.o")
	SET(LIBXPN_SOURCES_FULL_PATH "${LIBXPN_SOURCES_FULL_PATH};${CMAKE_SOURCE_DIR}/src/${source}")
endforeach(source)
#MESSAGE("Build dir is: ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/..${CMAKE_FILES_DIRECTORY}/xpn.dir/")
#MESSAGE("${LIBXPN_SOURCES_FULL_PATH}")

if (ENABLE_JAVA)
	add_subdirectory (java)
endif (ENABLE_JAVA)

