#AM_LDFLAGS=-lmosquitto
LDADD = @top_srcdir@/src/xpn_client/libxpn.a
 bin_PROGRAMS = xpn-ls xpn-rm xpn-cat xpn-mkdir xpn-rmdir cp-local2xpn cp-xpn2local xpn-statfs         xpncp xpncp_m xpncp_th xpnwriter      xpn_rebuild xpn_flush xpn_preload        xpn_cp
#bin_PROGRAMS = xpn-ls xpn-rm xpn-cat xpn-mkdir xpn-rmdir cp-local2xpn cp-xpn2local xpn-statfs         xpncp xpncp_m xpncp_th xpnwriter      xpn_rebuild xpn_flush xpn_preload xpn_ls xpn_cp
