#AM_LDFLAGS=-lmosquitto
LDADD = @top_srcdir@/src/xpn_client/libxpn.a
bin_PROGRAMS = xpn-ls-old xpn_ls xpn-rm xpn-cat xpn-mkdir xpn-rmdir cp-local2xpn cp-xpn2local xpn-statfs         xpncp xpncp_m xpncp_th xpnwriter      xpn_rebuild xpn_rebuild_active_reader xpn_rebuild_active_writer xpn_preload xpn_flush xpn_cp xpn_get_block_locality xpn_tree xpn_expand xpn_shrink